# autojepa

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  TODO.md  pyproject.toml
docs/: phase-0-baseline.md  phase-2-fix-diary.md  phase-2-runtime-evidence.md
docs/adr/: 001-fork-not-extension.md  002-basilica-prime-target.md  003-wrap-stable-pretraining.md  004-probe-auroc-objective.md  005-preserve-ar-env-prefix.md  006-no-examples-carryover.md  007-collapse-metrics-framework-free.md  008-forecaster-recalibration.md  009-multi-seed-default-3.md  010-jepa-extra-not-default.md  README.md  (+16 more)
scripts/: benchmark_baselines.py  progress_chart.py
tests/: test_aggregation.py  test_ast_policy.py  test_basilica_integration.py  test_basilica_unit.py  test_checkpoint.py  test_cli.py  test_cli_agent.py  test_command_progress.py  test_comparability.py  test_config_validate.py  test_contract.py  test_diff_executor.py  test_diff_executor_signal_cleanup.py  test_diff_mode_e2e.py  test_distillation_sink.py  test_distillation_trainer.py  test_engine_ar_model_dir.py  test_engine_cancel.py  test_examples_smoke.py  test_forecaster_ssl.py  test_forecasting.py  test_gae.py  test_gates.py  test_hybrid.py  test_hybrid_jepa_defaults.py  test_ijepa_cifar10_skeleton.py  test_intra_iteration.py  test_intra_iteration_lock_in_wins.py  test_jepa_prompt_fragments.py  test_learned_search.py  test_ledger.py  test_llm_context.py  test_llm_diff.py  test_llm_diff_hygiene.py  test_llm_search.py  test_loop_autonomy.py  test_loop_comparability.py  test_manifest.py  test_masking.py  test_mdp.py  (+26 more)
(+158 files in other folders)
